parser/tests/bad/arr03.st
% type of an 'array' must be a 'static array'

var upperBound: int
var arr: array 1..2 of array 1..upperBound of int
